# softap_sta

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  control_led.c  control_led.h  embedded_file_server.c  embedded_file_server.h  idf_component.yml  lights.c  lights.h  nvs_utils.c  nvs_utils.h  provisioning.c  provisioning.h  provisioning.orig.c  softap_sta.c  softap_sta.h  spiffs_file_server.c  spiffs_file_server.h  timekeeper.c  timekeeper.h  timeserver.c  timeserver.h  websockets.c  websockets.h
main/cert/: server.crt  server.key
main/spiffs/: back.html  haha.html  index copy.js  index.html  index.js  style.css
main/web/: index.html  style.css
